Actualizando mi index.html con diseño propio

--- a/public/index.html
+++ b/public/index.html
@@ -1,10 +1,47 @@
 <!DOCTYPE html>
-<html>
+<html lang="es">
 <head>
-    <title>Mi Proyecto NUAM</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Proyecto NUAM | Stephany</title>
+    <style>
+        body {
+            font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+            background-color: #f0f2f5;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            height: 100vh;
+            margin: 0;
+            color: #333;
+        }
+        .card {
+            background: white;
+            padding: 2rem;
+            border-radius: 10px;
+            box-shadow: 0 4px 6px rgba(0,0,0,0.1);
+            text-align: center;
+            max-width: 400px;
+        }
+        h1 { color: #ff6b6b; }
+        p { color: #666; }
+        .btn {
+            display: inline-block;
+            margin-top: 20px;
+            padding: 10px 20px;
+            background-color: #333;
+            color: white;
+            text-decoration: none;
+            border-radius: 5px;
+        }
+    </style>
 </head>
 <body>
-    <h1>¡Hola Mundo! Soy Stephany</h1>
-    <p>Mi sitio web ya está online gracias a Firebase y GitHub.</p>
+    <div class="card">
+        <h1>¡Hola, soy Stephany! 👩‍💻</h1>
+        <p>Esta es mi primera página desplegada automáticamente con <strong>Firebase</strong> y <strong>GitHub Actions</strong>.</p>
+        <p>Próximamente aquí: mis proyectos de ciberseguridad y desarrollo.</p>
+        <a href="#" class="btn">Ver más</a>
+    </div>
 </body>
 </html>
