Actualizando mi index.html con diseño propio

--- a/public/index.html
+++ b/public/index.html
@@ -38,7 +38,7 @@
 </head>
 <body>
     <div class="card">
-        <h1>¡Hola, soy Stephany! 👩‍💻</h1>
+        <h1>¡Hola, soy Stephany! </h1>
         <p>Esta es mi primera página desplegada automáticamente con <strong>Firebase</strong> y <strong>GitHub Actions</strong>.</p>
         <p>Próximamente aquí: mis proyectos de ciberseguridad y desarrollo.</p>
         <a href="#" class="btn">Ver más</a>
