--- a/public/index.html
+++ b/public/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Proyecto NUAM | Stephany</title>
+    <title>Proyecto NUAM</title>
     <style>
         body {
             font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
@@ -17,31 +17,43 @@
         }
         .card {
             background: white;
-            padding: 2rem;
+            padding: 3rem;
             border-radius: 10px;
-            box-shadow: 0 4px 6px rgba(0,0,0,0.1);
+            box-shadow: 0 4px 15px rgba(0,0,0,0.1);
             text-align: center;
-            max-width: 400px;
+            max-width: 500px;
         }
-        h1 { color: #ff6b6b; }
-        p { color: #666; }
+        h1 { 
+            color: #2c3e50; 
+            font-size: 2.5rem;
+            margin-bottom: 0.5rem;
+        }
+        p { 
+            color: #666; 
+            line-height: 1.6;
+        }
         .btn {
             display: inline-block;
-            margin-top: 20px;
-            padding: 10px 20px;
-            background-color: #333;
+            margin-top: 25px;
+            padding: 12px 30px;
+            background-color: #e74c3c; /* Un color rojo más corporativo */
             color: white;
             text-decoration: none;
-            border-radius: 5px;
+            border-radius: 50px;
+            font-weight: bold;
+            transition: background 0.3s;
+        }
+        .btn:hover {
+            background-color: #c0392b;
         }
     </style>
 </head>
 <body>
     <div class="card">
-        <h1>¡Hola, soy Stephany! </h1>
-        <p>Esta es mi primera página desplegada automáticamente con <strong>Firebase</strong> y <strong>GitHub Actions</strong>.</p>
-        <p>Próximamente aquí: mis proyectos de ciberseguridad y desarrollo.</p>
-        <a href="#" class="btn">Ver más</a>
+        <h1>Proyecto NUAM </h1>
+        <p>Bienvenido a la plataforma oficial.</p>
+        <p>Este sitio está desplegado y verificado con tecnología <strong>Firebase Hosting</strong>.</p>
+        <a href="#" class="btn">Entrar al Sitio</a>
     </div>
 </body>
 </html>
